--- a/apache.yml
+++ b/apache.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: apache
-  #sudo: yes
+  sudo: yes
   tasks:
     - name: install apache*
       apt: name=apache update_cache=yes state=latest
