restart needs to work...

--- a/apache.yml
+++ b/apache.yml
@@ -1,6 +1,5 @@
 ---
 - hosts: apache
-  #sudo: yes
   become: yes
 
   pre_tasks:
@@ -19,11 +18,11 @@
         name: httpd
         state: started
 
-        #  - name: copy files
-        #copy: src={item.src} dest={item.dest} owner={item.owner} group={item.group} mode={item.mode}
-        # with_items:
-        # notify: httpd restart
+    - name: enabled mod_rewrite
+      apache_module: name=rewrite state=present
+      notify:
+        - restart apache
 
   handlers: 
-      - name: httpd restart
-        service: name=httpd state=reloaded
+      - name: restart apache
+        service: name=apache state=reloaded
