--- a/apache.yml
+++ b/apache.yml
@@ -13,10 +13,8 @@
     - name: install apache2
       apt: name=apache2 update_cache=yes state=latest
 
-    - name: enabled mod_rewrite
-      apache2_module: name=rewrite state=present
-      notify: 
-        - restart apache2
+    - name: restart server
+      service: name=apache2 state=restarted
 
   handlers: 
     - name: restart apache2
