--- a/apache.yml
+++ b/apache.yml
@@ -10,7 +10,12 @@
   tasks:
     - name: install apache2
       apt: name=apache2 update_cache=yes state=latest 
-         
+
+    - name: start apache2
+      service: name=apache2 state=started 
+
+    - name: clone basic html template
+      git: repo=https://github.com/do-community/ansible-apache-tutorial.git dest=/var/www/example.com update=no
 
     - name: restart apache
       service: name=apache2 state=restarted
@@ -18,4 +23,3 @@
   handlers: 
     - name: restart apache2
       service: name=apache2 state=restarted 
-
