--- a/apache.yml
+++ b/apache.yml
@@ -14,13 +14,11 @@
     - name: start apache2
       service: name=apache2 state=started 
 
-      # - name: add several items to groups
+      ##need to build out adding items to groups before calling rolling restart per group
 
     - name: rolling restart per group
-      service: 
-        name: "{{ group }}"
-        state: restarted
-      with_items: groups.webservers
+      # service: name=group state=restarted
+      # with_items: groups.webservers
 
     - name: check status
       command: service apache2 status
@@ -28,8 +26,8 @@
 
 
   handlers: 
-    - name: restart item1
-      service: name=item1 state=restarted 
+    - name: restart apache
+      service: name=apache state=restarted 
 
     
 
